# pattern-matching

./: .gitignore  CMakeLists.txt  README.md  generation.cpp  hamming.cpp  main.cpp  random_pattern.cpp
